set05/problem05_compile_errors.txt
Compilation started at 11/27/2023, 10:32:08 PM
Compilation finished at 11/27/2023, 10:32:09 PM
Compilation started at 11/28/2023, 9:14:46 AM
Compilation finished at 11/28/2023, 9:14:47 AM
Compilation started at 11/28/2023, 9:15:19 AM
c:\Users\raksh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-RakshithaR1\set05\problem05.c: In function 'borga_x':
c:\Users\raksh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-RakshithaR1\set05\problem05.c:17:23: error: expected expression before '=' token
   for (int y = 1; y < =x; y++)
                       ^
Compilation finished at 11/28/2023, 9:15:20 AM
Compilation started at 11/28/2023, 9:15:32 AM
Compilation finished at 11/28/2023, 9:15:33 AM
Compilation started at 11/28/2023, 9:21:35 AM
Compilation finished at 11/28/2023, 9:21:36 AM
Compilation started at 11/28/2023, 9:31:26 AM
Compilation finished at 11/28/2023, 9:31:27 AM
Compilation started at 11/28/2023, 9:34:38 AM
Compilation finished at 11/28/2023, 9:34:39 AM
Compilation started at 11/28/2023, 9:40:49 AM
Compilation finished at 11/28/2023, 9:40:50 AM
Compilation started at 11/28/2023, 9:42:43 AM
Compilation finished at 11/28/2023, 9:42:45 AM
Compilation started at 11/28/2023, 9:44:30 AM
Compilation finished at 11/28/2023, 9:44:31 AM
Compilation started at 11/28/2023, 9:49:38 AM
Compilation finished at 11/28/2023, 9:49:39 AM
Compilation started at 11/28/2023, 9:50:04 AM
Compilation finished at 11/28/2023, 9:50:05 AM
Compilation started at 11/28/2023, 9:59:31 AM
Compilation finished at 11/28/2023, 9:59:32 AM
Compilation started at 11/28/2023, 10:01:06 AM
Compilation finished at 11/28/2023, 10:01:07 AM
Compilation started at 12/6/2023, 9:39:39 AM
Compilation finished at 12/6/2023, 9:39:42 AM
Compilation started at 12/6/2023, 9:40:48 AM
Compilation finished at 12/6/2023, 9:41:15 AM
Compilation started at 12/6/2023, 9:41:35 AM
Compilation finished at 12/6/2023, 9:41:35 AM
Compilation started at 12/6/2023, 9:42:19 AM
Compilation finished at 12/6/2023, 9:42:20 AM
Compilation started at 12/6/2023, 9:44:51 AM
Compilation finished at 12/6/2023, 9:44:51 AM
Compilation started at 12/6/2023, 9:46:30 AM
Compilation started at 12/6/2023, 9:46:38 AM
Compilation finished at 12/6/2023, 9:46:56 AM
Compilation finished at 12/6/2023, 9:47:19 AM
Compilation started at 12/6/2023, 9:52:27 AM
Compilation finished at 12/6/2023, 9:52:28 AM
Compilation started at 12/6/2023, 10:00:09 AM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file c:\Users\raksh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-RakshithaR1\set05\problem05.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation finished at 12/6/2023, 10:00:10 AM
Compilation started at 12/6/2023, 10:06:35 AM
Compilation finished at 12/6/2023, 10:07:01 AM
Compilation started at 12/6/2023, 10:15:58 AM
Compilation finished at 12/6/2023, 10:15:59 AM
